--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Teste de imgem de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -14,10 +14,15 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /*Shorthands - background
+                color > image > position > repeat > [size] > attachment
+            */
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quia! Rerum non dolores beatae deleniti temporibus voluptatem libero magnam, corporis repudiandae sint vero ut provident commodi accusantium aspernatur. Illum, harum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime corrupti, corporis odio architecto maiores numquam eaque nesciunt quis ipsa consequatur commodi ipsam facilis nostrum nulla est assumenda perspiciatis aspernatur expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ullam adipisci explicabo perferendis non, aliquam reprehenderit deserunt fugiat nam laborum, dolores debitis consectetur eius molestiae, suscipit molestias ipsam alias fugit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quia! Rerum non dolores beatae deleniti temporibus voluptatem libero magnam, corporis repudiandae sint vero ut provident commodi accusantium aspernatur. Illum, harum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime corrupti, corporis odio architecto maiores numquam eaque nesciunt quis ipsa consequatur commodi ipsam facilis nostrum nulla est assumenda perspiciatis aspernatur expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ullam adipisci explicabo perferendis non, aliquam reprehenderit deserunt fugiat nam laborum, dolores debitis consectetur eius molestiae, suscipit molestias ipsam alias fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, accusamus dolorum quam rerum dolor excepturi illum explicabo aspernatur ea odio rem labore nulla consectetur ex repellendus illo voluptatem consequuntur fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam assumenda optio sequi esse iure excepturi velit, vero nemo! Officia reprehenderit minima fugiat magni explicabo? Pariatur inventore ut doloremque minima nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptatum obcaecati harum deleniti. Quo voluptates soluta sequi non nesciunt laborum eaque sed quod magni ex, dolorem ullam totam, quaerat rem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ullam in deserunt ad maiores eum, perspiciatis officiis nostrum, minus adipisci nisi iusto voluptatem temporibus explicabo ducimus? Expedita eum quasi quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eius, eum quod aut ad saepe ea provident harum, cum omnis, deserunt mollitia dignissimos quidem eaque reiciendis similique unde at corporis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quia exercitationem optio ducimus natus voluptates, quae est quidem sed delectus facilis ab ipsa neque fuga praesentium molestias sapiente recusandae aliquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure velit quod porro sapiente, earum quasi saepe officia veniam distinctio dolorem molestias esse adipisci nobis autem a asperiores dolore, delectus quam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, perferendis doloremque! Culpa iure doloribus reprehenderit nisi quidem officiis, aut quasi saepe ipsa ipsum illum ab omnis eveniet rerum eum sapiente!</p>
     </main>
 </body>
 </html>
