--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -21,6 +21,13 @@
             padding: 10px;
         }
 
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead{
             background-color: gray;
             color: white;
@@ -36,6 +43,7 @@
     <!--
         Anatomia para tabelas grandes
         Table
+            Caption
             thead
                 tr, td, th
             tbody
@@ -44,6 +52,7 @@
                 tr, td, th
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
                 <th>Estado</th>
