--- a/Exercícios/ex023desafio/desafio3-023.html
+++ b/Exercícios/ex023desafio/desafio3-023.html
@@ -5,23 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        table{
+            border-collapse: collapse;
+            border: 1px solid black;
+        }
+
+        thead{
+            background-color: grey;
+            color: white;
+        }
+
+        th, td{
+            border: 1px solid black;
+            padding: 10px;
+        }
+
+        .media{
+            background-color: grey;
+            color: white;
+            text-align: left;
+        }
+
+        .notamedia{
+            background-color: grey;
+            color: white;
+        }
+
+        .disciplinas{
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
     <table>
         <thead>
             <tr>
-                <th>Área</th>
-                <th>Disciplinas</th>
-                <th>Notas</th>
-                <th>Média</th>
+                <th rowspan="2" scope="row">Área</th>
+                <th rowspan="2" scope="colgroup">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="colgroup">Média</th>
             </tr>
             <tr>
-                <th>Nota1</th>
-                <th>Nota2</th>
+                <th scope="colgroup">Nota1</th>
+                <th scope="colgroup">Nota2</th>
             </tr>
         </thead>
         <tbody>
-
+            <tr>
+                <th rowspan="4" scope="rowgroup">Exatas</th>
+                <th class="disciplinas" scope="rowgroup">Matemática</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="disciplinas" scope="rowgroup">Física</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="disciplinas" scope="rowgroup">Química</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="disciplinas" scope="rowgroup">Biologia</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="media" colspan="4" scope="row">Média de Exatas</th>
+                <td class="notamedia">0.0</td>
+            </tr>
+            <tr>
+                <th rowspan="2" scope="rowgroup">Humanas</th>
+                <th class="disciplinas" scope="rowgroup">História</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="disciplinas" scope="rowgroup">Geografia</th>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th class="media" colspan="4" scope="row">Média de Humanas</th>
+                <td class="notamedia">0.0</td>
+            </tr>
         </tbody>
     </table>
 </body>
