--- a/Exercícios/ex024/iframe001.html
+++ b/Exercícios/ex024/iframe001.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
+    <p>O repositório do Lucas <iframe src="https://lucasaraujo1987.github.io" frameborder="0"></iframe> também é muito legal!</p>
 </body>
 </html>
