--- a/Exercícios/ex024/iframe001.html
+++ b/Exercícios/ex024/iframe001.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
-    <p>O repositório do Lucas <iframe src="https://lucasaraujo1987.github.io" frameborder="0"></iframe> também é muito legal!</p>
+    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0" scolling="no"></iframe> para aprender a programar</p>
+    <p>O repositório do Lucas <iframe src="https://github.com/lucasaraujo1987" frameborder="0"><a href="https://github.com/lucasaraujo1987" target="_blank">GitHub</a></iframe> também é muito legal!</p>
 </body>
 </html>
