--- a/Exercícios/ex024/iframe002.html
+++ b/Exercícios/ex024/iframe002.html
@@ -22,7 +22,9 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate quidem praesentium tempora facere earum, ipsum ipsam aperiam quaerat obcaecati veniam alias vero, sit, saepe recusandae sed ex similique at impedit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, fuga. Provident est deserunt nam quaerat a eligendi ab, ducimus atque laboriosam placeat eaque eius excepturi et iure. Omnis, quae modi?</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="./paginas extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com isso.</p>
+    </iframe>
     
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vitae error, magni recusandae nemo et dicta mollitia repellendus totam obcaecati, quia sequi ipsa culpa velit nulla beatae dolor sed sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae facilis ipsam molestiae minima commodi ea id, nobis tempora omnis cupiditate quisquam unde quis culpa atque rem voluptas est distinctio accusamus?</p>
 </body>
