--- a/Exercícios/ex024/iframe003.html
+++ b/Exercícios/ex024/iframe003.html
@@ -22,7 +22,7 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam adipisci odio architecto deserunt expedita, similique, officiis accusantium nisi omnis pariatur ab quis reprehenderit ullam, ipsam ut suscipit. Officia, veritatis! Sint?</p>
 
     <ul>
-        <li><a href="./paginas extras/pagina001.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas extras/pagina001.html" target="frame">Primeira página</a></li>
         <li><a href="paginas extras/pag002.html" target="frame">Segunda página</a></li>
         <li><a href="paginas extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
