--- a/Exercícios/ex024/iframe003.html
+++ b/Exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
     </ul>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit iure accusantium vel, ex voluptate rerum, eligendi velit ut eaque, esse similique reiciendis recusandae quo atque. Magni nostrum impedit dolor amet. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, eaque odio totam libero explicabo nihil quos molestias veniam inventore aut facere exercitationem temporibus harum maxime enim a vero ratione assumenda?</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit iure accusantium vel, ex voluptate rerum, eligendi velit ut eaque, esse similique reiciendis recusandae quo atque. Magni nostrum impedit dolor amet.</p> <img src='imagens/cursoemvideo-logo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
